syntax = "proto3";

package micro.super.lightning.service.auth;

service Auth {
  rpc MakeAccessToken (Request) returns (Response) {}
  rpc DelUserAccessToken (Request) returns (Response) {}
  rpc GetCachedAccessToken (Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message Error {
    int32 code = 1;
    string detail = 2;
}

message Request {
    int64 userId = 1;
    string userName = 2;
    string token = 3;
}

message Response {
    bool success = 1;
    Error error = 2;
    string token = 3;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
